<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_det_sismo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context="sistemasfireg.igp.org.sismosperu.DetailActivity">
    <TextView
        android:text="DETALLES DEL INCIDENTE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:gravity="center_horizontal"
        style="@style/subtitulo" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_toStartOf="@+id/textView"
        android:layout_marginTop="22dp"
        android:layout_alignParentEnd="true"
        android:id="@+id/tabla">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/itexto1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                style="@style/titdato" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/incategoria"
                style="@style/valdato" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/itexto3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                style="@style/titdato"/>

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/inreferencia"
                style="@style/valdato"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:text="@string/itexto6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView18"
                style="@style/titdato"/>

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txintenso"
                style="@style/valdato"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/itexto2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                style="@style/titdato"/>

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/inmagnitud"
                style="@style/valdato"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/itexto4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                style="@style/titdato"/>

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/inprofundidad"
                style="@style/valdato"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/itexto5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                style="@style/titdato"/>

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/infecha"
                style="@style/valdato"/>
        </TableRow>
    </TableLayout>

    <WebView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tabla"
        android:layout_alignParentStart="true"
        android:layout_weight="8.85"
        android:id="@+id/visor" >

    </WebView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="2dp"
        android:layout_y="409dp"
        android:layout_below="@+id/visor"
        android:layout_weight="2"
        android:id="@+id/linea">

        <Button
            android:text="Regresar"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:id="@+id/bregresar"
            android:onClick="regresar" />
    </LinearLayout>
</LinearLayout>
